# result_reporter

./: .gitignore  LICENSE  README.md  pyproject.toml
src/result_reporter/: __init__.py  data_loader.py  data_saver.py  latex_exporter.py  plotConfig.py  result_reporter.py  sqlite.py  type.py
