[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "result_reporter"
version = "0.0.1"
authors = [
  { name="adrianLepp", email="leppadrian@outlook.de" },
]
description = "Store simulation results in a sqlite db and generate reports "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
    "pandas",
    "sqlalchemy",
    "matplotlib",
    "numpy",
    "pylatex"
]

[project.urls]
Homepage = "https://github.com/adrianLepp/result_reporter"